--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <li>capturing soil health data from remote farm fields</li>
 </ul>
 <p>You can view all of our designs and code on <a href="http://github.com/waterbearcollective">github</a>.</p>
-<p>Get in touch with us at: collaborate at waterbearcollective dot io</p>
+<p>Get in touch with us at: collaborate at waterbearcollective dot org</p>
 <h2 id="projects">Projects</h2>
 <ul>
 <li><a href="electric_fence.html">Electric Fence Monitor Prototyping</a> -- Building a circuit for monitoring electric fence operations on farms.</li>
