--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
 	<body>
-		waterbearcollective!
-		<br>
-		<img src="imgs/polar.png">
+		<img width=200px src="imgs/polar_red.png">
 	</body>
 </html>
