--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Some baseline queries and provocations to present to interlocutors that might se
 </div>
 -->
 <div id="blurb">
-<p><a href="/blog/philo/">What is Waterbear Collective?</a>
--- Notes towards a semi-manifesto. (2022-05-26)</p>
+<p>Register for the upcoming <a href="http://waterbearcollective.org/trellis">DIY Garden Trellis Workshop</a>
+on June 18th, 2022!</p>
 </div>
 <hr>
 <div class="posts-area">
