--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Some baseline queries and provocations to present to interlocutors that might se
 </div>
 -->
 <div id="blurb">
-<p>Register for the upcoming <a href="http://waterbearcollective.org/trellis">DIY Garden Trellis Workshop</a>
-on June 18th, 2022!</p>
+  <p>Register <a href="http://waterbearcollective.org/trellis">here</a> for the <a href="http://waterbearcollective.org/trellis">DIY Garden Trellis Workshop</a>
+on June 18th, 2022, in Lincoln, MA.</p>
 </div>
 <hr>
 <div class="posts-area">
