--- a/page-list/index.html
+++ b/page-list/index.html
@@ -46,7 +46,7 @@
   <tbody>
   <tr>
     <td><a href="/posts/firstpost/"><code>/posts/firstpost/</code></a></td>
-    <td>Upcoming DIY Garden Trellis Workshop</td>
+    <td>Upcoming DIY Garden Trellis Workshop on June 18</td>
   </tr>
   <tr>
     <td><a href="/about/"><code>/about/</code></a></td>
