--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   
       <p> <ul>
         <li><a href="https://groups.google.com/g/pedagogy-study-group">Pedagogy study group</a>. This is the email list (google group) for the Pedagogy Study Group.</li>
+        <li><a href="https://docs.google.com/document/d/1MlfIuFEb2fady-vSJVoPAPMlvaXFnJA0-TENjz7BKoA/edit?usp=sharing">Pedagogy project ideas</a>.</li>
       </ul> </p>
       
     </div>
